--- a/dialog/src/main/res/drawable/ituns_shape_input_light.xml
+++ b/dialog/src/main/res/drawable/ituns_shape_input_light.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/ituns_btn_dark_pressed"/>
-    <corners android:bottomRightRadius="10dp"/>
+    <corners android:radius="3dp"/>
+    <stroke android:width="0.5dp" android:color="@color/ituns_line_light"/>
 </shape>
