--- a/dialog/src/main/res/layout/ituns_dialog_input.xml
+++ b/dialog/src/main/res/layout/ituns_dialog_input.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:minWidth="240dp"
+    android:minWidth="280dp"
     android:paddingTop="5dp"
     android:gravity="center"
     android:orientation="vertical"
@@ -24,17 +24,17 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/ituns_selector_line"/>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/content"
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/input"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="60dp"
+        android:padding="3dp"
         android:layout_marginTop="15dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:gravity="center"
         android:textSize="14sp"
-        android:textColor="@color/ituns_color_text" />
+        android:textColor="@color/ituns_color_text"
+        android:background="@drawable/ituns_selector_input_bkg"/>
 
     <View
         android:id="@+id/line_hb"
